objects/SpellTemplate__mdt/SpellTemplate__mdt.object-meta.xml
<CustomObject>
    <label>SpellTemplate</label>
    <pluralLabel>SpellTemplates</pluralLabel>
</CustomObject>