objects/SpellTemplate__mdt/fields/DamageLevel__c.field-meta.xml
<CustomField>
    <fullName>DamageLevel__c</fullName>
    <label>Damage Level</label>
    <length>10</length>
    <type>Text</type>
</CustomField>