objects/SpellTemplate__mdt/fields/Drain__c.field-meta.xml
<CustomField>
    <fullName>Drain__c</fullName>
    <label>Drain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>