objects/SpellTemplate__mdt/fields/ElementalEffect__c.field-meta.xml
<CustomField>
    <fullName>ElementalEffect__c</fullName>
    <label>Elemental Effect</label>
    <length>100</length>
    <type>Text</type>
</CustomField>