objects/SpellTemplate__mdt/fields/MatterBased__c.field-meta.xml
<CustomField>
    <fullName>MatterBased__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Matter Based</label>
    <type>Checkbox</type>
</CustomField>