objects/SpellTemplate__mdt/fields/RequiresName__c.field-meta.xml
<CustomField>
    <fullName>RequiresName__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Name</label>
    <type>Checkbox</type>
</CustomField>