objects/SpellTemplate__mdt/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <label>Target</label>
    <length>100</length>
    <type>Text</type>
</CustomField>