objects/SpellTemplate__mdt/fields/Variants__c.field-meta.xml
<CustomField>
    <fullName>Variants__c</fullName>
    <label>Variants</label>
    <length>255</length>
    <type>Text</type>
</CustomField>